--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "0.2.1",
+    "embla-carousel-autoplay": "^8.0.2",
+    "embla-carousel-react": "^8.0.2",
     "jotai": "^2.8.0",
     "lucide-react": "^0.298.0",
     "next": "14.0.4",
@@ -34,6 +37,7 @@
     "react-use": "^17.5.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animated": "^1.0.1",
     "zod": "^3.23.5"
   },
   "devDependencies": {
