--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
@@ -24,9 +26,11 @@
     "cmdk": "0.2.1",
     "embla-carousel-autoplay": "^8.0.2",
     "embla-carousel-react": "^8.0.2",
+    "framer-motion": "^11.1.7",
     "jotai": "^2.8.0",
     "lucide-react": "^0.298.0",
     "next": "14.0.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
@@ -35,6 +39,7 @@
     "react-hook-form": "^7.51.3",
     "react-select": "^5.8.0",
     "react-use": "^17.5.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.0.1",
